# ml_platform

./: .gitignore  README.md  main.py  project_preview.md  pyproject.toml  week5_execution.md  week6_execution.md  week7_execution.md  week8_execution.md
data/: predictions.jsonl
features/: baseline.py  definitions.py  store.py
ingestion/: fetch.py  stream.py  validate.py
monitoring/: drift.py  performance.py
registry/: model_registry.py
serving/: app.py
tests/: test_drift.py  test_feature_store.py  test_features.py  test_ingestion.py  test_integration.py  test_labels.py  test_performance.py  test_registry.py  test_runner.py  test_serving.py
training/: evaluation.py  labels.py  pipeline.py  runner.py
