[project]
name = "ml-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlflow>=3.10.0",
    "pandas>=2.3.3",
    "prometheus-client>=0.24.1",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "structlog>=25.5.0",
    "xgboost>=3.2.0",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]
